--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@reduxjs/toolkit": "^1.9.5",
         "@types/node": "^20.4.2",
         "axios": "^1.4.0",
+        "firebase": "^10.12.0",
         "material-ui-popup-state": "^5.0.9",
         "path": "^0.12.7",
         "react": "^18.2.0",
