--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,7 +1,7 @@
 name: Delop node Application 
 on: 
     push: 
-        branches: ["main"]
+        branches: ["master"]
 jobs: 
     build: 
         runs-on: ubuntu-latest
