Fix: gitworkflow login page

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 
-VITE_SERVER_PROD=https://leagues.izsports.online
-VITE_SERVER_DEV=http://localhost:3000
+VITE_SERVER_PROD=http://localhost:8080
+VITE_SERVER_DEV=http://localhost:8080
+VITE_apiKey=AIzaSyBkSBqm7hX4l-AMcgRclj99BnYU3c2oGT4
+VITE_authDomain=login-a5c4d.firebaseapp.com
+VITE_projectId=login-a5c4d
+VITE_storageBucket=login-a5c4d.appspot.com
+VITE_messagingSenderId=221908195357
+VITE_appId=1:221908195357:web:89b83cdf39f1900e898ef4
+VITE_measurementId=G-CMN7Q5WSLH
