--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,27 +1,27 @@
-name: Delop node Application 
-on: 
-    push: 
+name: Delop node Application
+on:
+    push:
         branches: ["master"]
-jobs: 
-    build: 
+jobs:
+    build:
         runs-on: ubuntu-latest
-        steps: 
+        steps:
             - name: Checkout Source
               uses: actions/checkout@v4
-            - name: Login to docker hub 
+            - name: Login to docker hub
               run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
-            - name: Build Docker Image 
-              run: docker build -t hieupc05/mui-shopdev --build-arg VITE_SERVER_PROD='${{secrets.VITE_SERVER_PROD}}' .
-            - name: Publish Image to docker hub 
-              run: docker push hieupc05/mui-shopdev:latest 
+            - name: Build Docker Image
+              run: docker build -t hieupc05/mui-shopdev --build-arg VITE_SERVER_PROD='${{secrets.VITE_SERVER_PROD}}' --build-arg VITE_apiKey='${{secrets.VITE_apiKey}}' --build-arg VITE_authDomain='${{secrets.VITE_authDomain}}' --build-arg VITE_projectId='${{secrets.VITE_projectId}}' --build-arg VITE_storageBucket='${{secrets.VITE_storageBucket}}' --build-arg VITE_messagingSenderId='${{secrets.VITE_messagingSenderId}}' --build-arg VITE_appId='${{secrets.VITE_appId}}' --build-arg VITE_measurementId='${{secrets.VITE_measurementId}}' .
+            - name: Publish Image to docker hub
+              run: docker push hieupc05/mui-shopdev:latest
 
-    deploy: 
-        needs: build 
+    deploy:
+        needs: build
         runs-on: self-hosted
-        steps: 
-            - name: Pull image from docker hub 
+        steps:
+            - name: Pull image from docker hub
               run: docker pull hieupc05/mui-shopdev:latest
-            - name: Delete old container 
+            - name: Delete old container
               run: docker rm -rf ui-shopdev || true
-            - name: Run docker container 
-              run: docker run -d -p 5173:80 --name ui-shopdev mui-shopdev 
+            - name: Run docker container
+              run: docker run -d -p 4000:80 --name ui-shopdev mui-shopdev
