--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite --host --port 3000",
+        "dev": "vite --host --port 4000",
         "build": "tsc && vite build",
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview --port 4000"
     },
     "dependencies": {
         "@emotion/react": "^11.11.1",
@@ -19,6 +19,7 @@
         "@reduxjs/toolkit": "^1.9.5",
         "@types/node": "^20.4.2",
         "axios": "^1.4.0",
+        "cross-env": "^7.0.3",
         "firebase": "^10.12.0",
         "material-ui-popup-state": "^5.0.9",
         "path": "^0.12.7",
