FIX: remove flag -r docker

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,6 +22,6 @@ jobs:
             - name: Pull image from docker hub
               run: docker pull hieupc05/mui-shopdev:latest
             - name: Delete old container
-              run: docker rm -rf ui-shopdev || true
+              run: docker rm -f ui-shopdev || true
             - name: Run docker container
               run: docker run -d -p 4000:80 --name ui-shopdev hieupc05/mui-shopdev
