--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,4 +24,4 @@ jobs:
             - name: Delete old container
               run: docker rm -f ui-shopdev || true
             - name: Run docker container
-              run: docker run -d -p 4000:80 --name ui-shopdev hieupc05/mui-shopdev
+              run: docker run -d -p 4000:80 --name ui-shopdev --network=server-shopdev-network hieupc05/mui-shopdev
