--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,19 @@
+
 server {
     listen 80;
 
-    # Route for API requests
     location /api {
-        rewrite ^/api/(.*)$ /$1 break;
-        proxy_pass http://localhost:8080;
+        proxy_pass http://13.215.179.135:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Route for other requests
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html =404;
     }
 }
+
