ADD: add domain

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,8 @@
 server {
     listen 80;
 
+    server_name shop.izsports.online www.shop.izsports.online;
+
     location /api {
         proxy_pass http://13.215.179.135:8080;
         proxy_set_header Host $host;
