--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,14 @@
 
+
 server {
     listen 80;
-
     server_name shop.izsports.online www.shop.izsports.online;
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html =404;
+    }
 
     location /api {
         proxy_pass http://13.215.179.135:8080;
@@ -12,10 +18,30 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Redirect HTTP to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name shop.izsports.online www.shop.izsports.online;
+
+    ssl_certificate /etc/letsencrypt/live/shop.izsports.online/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/shop.izsports.online/privkey.pem;
+
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html =404;
     }
-}
 
+    location /api {
+        proxy_pass http://13.215.179.135:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
