--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,7 +22,7 @@ jobs:
             - name: Pull image from docker hub
               run: docker pull hieupc05/mui-shopdev:latest
             - name: Stop and Remove Old Containers
-              run: docker compose down
+              run: docker compose -f ~/actions-runner-ui/_work/user_GraduationProject/user_GraduationProject/docker-compose.yaml down
 
             - name: Start Containers
-              run: docker compose up -d
+              run: docker compose -f ~/actions-runner-ui/_work/user_GraduationProject/user_GraduationProject/docker-compose.yaml up -d
