--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,7 +26,7 @@ jobs:
               run: docker rm -f ui-shopdev || true
 
             - name: Run Shopdev Container
-              run: docker run -d --name ui-shopdev -p 80:80 -p 443:443 -v $(pwd)/certbot/conf:/etc/letsencrypt -v $(pwd)/certbot/www:/var/www/certbot hieupc05/mui-shopdev:latest
+              run: docker run -d --name ui-shopdev -p 80:80 -p 443:443 -v ~/certbot/conf:/etc/letsencrypt -v ~/certbot/www:/var/www/certbot hieupc05/mui-shopdev:latest
 
             - name: Run Certbot Container
-              run: docker run --name certbot -v $(pwd)/certbot/conf:/etc/letsencrypt -v $(pwd)/certbot/www:/var/www/certbot certbot/certbot certonly --webroot -w /var/www/certbot --force-renewal --email hoanghieuss3344@gmail.com -d shop.izsports.online --agree-tos
+              run: docker run --name certbot -v ~/certbot/conf:/etc/letsencrypt -v ~/certbot/www:/var/www/certbot certbot/certbot certonly --webroot -w /var/www/certbot --force-renewal --email hoanghieuss3344@gmail.com -d shop.izsports.online --agree-tos
