--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,3 @@
-
-
-
 server {
     listen 80 default_server;
     server_name shop.izsports.online www.shop.izsports.online;
@@ -21,7 +18,36 @@ server {
     location ~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+    return 301 https://$host$request_url;
 
 }
+
+server {
+    listen 443 ssl http2;
+    server_name shop.izsports.online www.shop.izsports.online;
+
+    ssl_certificate /etc/letsencrypt/live/shop.izsports.online/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/shop.izsports.online/privkey.pem;
+
+    location /api {
+    proxy_pass http://13.215.179.135:8080;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html =404;
+    }
+
+    location ~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+}
+
+
 
 
